# sharetree

./: .dockerignore  .envrc  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  conftest.py  docker-compose.dev.yml  pyproject.toml
.github/workflows/: docker-build.yml  python-app.yml
docker/: Caddyfile  Caddyfile.dev  Dockerfile.caddy  docker-compose.dev.yml  docker-compose.prod.yml  entrypoint.sh
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/assets/: index.css
frontend/src/components/: Breadcrumbs.vue  EntryList.vue  FileIcon.vue  ThemeToggle.vue
frontend/src/router/: index.js
frontend/src/views/: AccessView.vue  AdminBrowseView.vue  AdminCreateAccessCodeView.vue  AdminDownloadLogsView.vue  AdminLoginView.vue  AdminSessionsView.vue  AdminView.vue  BrowseView.vue  NotFoundView.vue
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_add_session_id_to_access_codes.py
src/sharetree/: __main__.py  app.py  db.py  logging.py  session.py  settings.py
src/sharetree/api/: access.py  auth.py  browse.py  download.py  headers.py
src/sharetree/api/admin/: access.py  auth.py  browse.py  deps.py  logs.py
src/sharetree/api/tests/: test_access_activate.py  test_auth.py
src/sharetree/models/: all.py
src/sharetree/services/: access.py  browse.py  logs.py
src/sharetree/services/tests/: test_access_release.py  test_browse.py  test_get_file_path.py
src/sharetree/tests/: test_migrations.py
tests/services/: test_browse.py
(+19 files in other folders)
