[build-system]
requires = ["uv_build >= 0.9.18, <0.11.0"]
build-backend = "uv_build"

[project]
name = "sharetree"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Frederic Morin", email = "frederic.morin.8@gmail.com"},
]

dependencies = [
    "uvicorn",
    "starlette[full]", # for session management
    # api
    "fastapi",
    "apiexception", # standardize success and error response
    "pydantic-settings",
    "sqlalchemy>=2.0.48",
    "alembic",
]

[project.optional-dependencies]
dev = ["pytest", "ty", "ruff", "uv", "ipdb"]

[project.scripts]
sharetree = "sharetree.__main__:main"

[tool.ruff]
line-length = 120
